--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,7 @@
 services:
   - type: web
     plan: free
+    dockerfilePath: ./Dockerfile
     # This is the runtime for services that pull a prebuilt Docker image
     runtime: image
     # You can give the service any name
