--- a/render.yaml
+++ b/render.yaml
@@ -12,12 +12,9 @@ services:
     plan: free
     dockerfilePath: ./Dockerfile
     # This is the runtime for services that pull a prebuilt Docker image
-    runtime: image
+    runtime: docker
     # You can give the service any name
     name: n8n-service
-    image:
-      # Pulls the n8n image tagged as latest from Docker Hub
-      url: docker.io/n8nio/n8n:latest
 
     # All environment variables defined below are required!
     #
